[package]
name = "bug_report"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Shell", "Win32_System_Memory", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Storage_FileSystem",  "Win32_System_IO"] }

[profile.release]
panic = "abort"
overflow-checks = false 

[profile.dev]
panic = "abort"
overflow-checks = false 